; ModuleID = '/home/carl/AnghaBench/git/extr_grep.c_dump_grep_expression.c'
source_filename = "/home/carl/AnghaBench/git/extr_grep.c_dump_grep_expression.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.grep_opt = type { i64, %struct.grep_expr* }
%struct.grep_expr = type { i32 }

@stderr = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [13 x i8] c"[all-match]\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.grep_opt*)* @dump_grep_expression to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @dump_grep_expression(%struct.grep_opt* %0) #0 {
  %2 = alloca %struct.grep_opt*, align 8
  %3 = alloca %struct.grep_expr*, align 8
  store %struct.grep_opt* %0, %struct.grep_opt** %2, align 8
  %4 = load %struct.grep_opt*, %struct.grep_opt** %2, align 8
  %5 = getelementptr inbounds %struct.grep_opt, %struct.grep_opt* %4, i32 0, i32 1
  %6 = load %struct.grep_expr*, %struct.grep_expr** %5, align 8
  store %struct.grep_expr* %6, %struct.grep_expr** %3, align 8
  %7 = load %struct.grep_opt*, %struct.grep_opt** %2, align 8
  %8 = getelementptr inbounds %struct.grep_opt, %struct.grep_opt* %7, i32 0, i32 0
  %9 = load i64, i64* %8, align 8
  %10 = icmp ne i64 %9, 0
  br i1 %10, label %11, label %14

11:                                               ; preds = %1
  %12 = load i32, i32* @stderr, align 4
  %13 = call i32 @fprintf(i32 %12, i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str, i64 0, i64 0))
  br label %14

14:                                               ; preds = %11, %1
  %15 = load %struct.grep_expr*, %struct.grep_expr** %3, align 8
  %16 = call i32 @dump_grep_expression_1(%struct.grep_expr* %15, i32 0)
  %17 = call i32 @fflush(i32* null)
  ret void
}

declare dso_local i32 @fprintf(i32, i8*) #1

declare dso_local i32 @dump_grep_expression_1(%struct.grep_expr*, i32) #1

declare dso_local i32 @fflush(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
